[project]
name = "supermario-samplecode251218"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "gym>=0.26.0",
    "gym-super-mario-bros>=7.4.0",
    "nes-py>=8.2.1",
    "tqdm>=4.66.0",
    "ruff>=0.8.0",
]
